--- a/src/app/modules/reports/reports.component.html
+++ b/src/app/modules/reports/reports.component.html
@@ -1,77 +1,97 @@
-<div class="container">
-  <div class="row"><!-- Bloque superAdmin-->
-    <h1 class="title_page">Reportes.</h1>
-    <div class="alert alert-light" role="alert">
-      <form [formGroup]="form">
-        <mat-form-field appearance="outline" class="input_css" *ngIf="esSupAdmin">
-          <mat-label>Sucursal</mat-label>
-          <mat-select id="sucursal" formControlName="sucursal">
-            <mat-option value="0">Mostrar todos...</mat-option>
-            <mat-option *ngFor="let opcion of listaSucursales" [value]="opcion.id"> {{ opcion.sucursal }}</mat-option>
-          </mat-select>
-        </mat-form-field>
+<div style="margin-top: 60px;">
+<div class="container mt-4">
+  <div class="row">
+      <h2 class="title_page">REPORTES DE SUCURSALES</h2>
+      <div class="alert alert-light" role="alert">
+          <form [formGroup]="form">
+              <mat-form-field appearance="outline" class="input_css">
+                  <mat-label>Periodo</mat-label>
+                  <mat-date-range-input [rangePicker]="picker">
+                      <input matStartDate placeholder="Fecha inicial" formControlName="p_inicial">
+                      <input matEndDate placeholder="Fecha final" formControlName="p_final">
+                  </mat-date-range-input>
+                  <mat-hint>YYYY/MM/DD – YYYY/MM/DD</mat-hint>
+                  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                  <mat-date-range-picker #picker></mat-date-range-picker>
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="input_css">
+                  <mat-label>Tipo de reporte</mat-label>
+                  <mat-select id="sucursal" formControlName="tipo" [(ngModel)]="opcionSeleccionada">
+                      <mat-option value="1" (click)="obtenerDatosParaGrafico1()">Membresias vendidas (total)</mat-option>
+                      <mat-option value="2" (click)="obtenerDatosParaGrafico2()">Membresias vendidas (visita, quincena, mensuaidad, anualidad)</mat-option>
+                      <mat-option value="5" (click)="obtenerDatosParaGrafico5()">Productos más vendidos (productos)</mat-option>
+                    <!--  <mat-option value="3">Servicios vendidos</mat-option>
+                      <mat-option value="4">Servicios vendidos</mat-option>
+                      <mat-option value="5">Productos vendidos (productos)</mat-option>
+                      <mat-option value="6">Productos vendidos (ingresos)</mat-option>-->
+                      <!--  <mat-option *ngIf="esSupAdmin" value="7">Productos vendidos (sucursales)</mat-option>-->
+                  </mat-select>
+              </mat-form-field>
 
-        <mat-form-field appearance="outline" class="input_css">
-          <mat-label>Periodo</mat-label>
-          <mat-date-range-input [rangePicker]="picker">
-            <input matStartDate placeholder="Fecha inicial" formControlName="p_inicial">
-            <input matEndDate placeholder="Fecha final" formControlName="p_final">
-          </mat-date-range-input>
-          <mat-hint>YYYY/MM/DD – YYYY/MM/DD</mat-hint>
-          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-date-range-picker #picker></mat-date-range-picker>
-        </mat-form-field>
+            <!-- <div  *ngIf="opcionSeleccionada === '1'">
+                <br>
+                  <button style="background-color: #fd9727;font-size: 20px;" mat-raised-button  (click)="obtenerDatosParaGrafico1()">Generar reporte.</button>
+              </div>
+              <div class="container_btn" *ngIf="opcionSeleccionada === '2'">
+                  <button mat-raised-button class="btn_css btn-danger" (click)="obtenerDatosParaGrafico2()">Generar reporte.</button>
+              </div>
+              <div class="container_btn" *ngIf="opcionSeleccionada === '5'">
+                <button mat-raised-button class="btn_css btn-danger" (click)="obtenerDatosParaGrafico5()">Generar reporte.</button>
+            </div>-->
 
-        <mat-form-field appearance="outline" class="input_css">
-          <mat-label>Tipo de reporte</mat-label>
-          <mat-select id="sucursal" formControlName="tipo">
-           <!-- <mat-option value="1">Membresias vendidas</mat-option>-->
-            <mat-option value="2">Membresias vendidas</mat-option>
-           <!-- <mat-option value="3">Servicios vendidos</mat-option>-->
-            <mat-option value="4">Servicios vendidos</mat-option>
-            <!--<mat-option value="5">Productos vendidos (productos)</mat-option>-->
-            <mat-option value="6">Productos vendidos (ingresos)</mat-option>
-            <mat-option *ngIf="esSupAdmin" value="7">Productos vendidos (sucursales)</mat-option>
-          </mat-select>
-        </mat-form-field>
+          </form>
 
-        <div class="container_btn">
-          <button mat-raised-button class="btn_css btn-danger" (click)="consult()">Generar reporte.</button>
+
+          <div class="row" *ngIf="opcionSeleccionada === '1'">
+              <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
+                <br><br><br>
+                  <h1>{{ chartData.label }}</h1>
+                  <div style="width: 90%;height: 70%;">
+                      <canvas baseChart [datasets]="[chartData]" [labels]="['Ventas']" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
+                      </canvas>
+                  </div>
+              </div>
+          </div>
+          <div class="row" *ngIf="opcionSeleccionada === '2'">
+              <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
+                  <br><br><br>
+                  <h1>{{ chartData.label }}</h1>
+                  <div style="width: 90%;height: 70%;">
+                      <canvas baseChart [datasets]="[chartData]" [labels]="['Visita', 'Quincena','Mensuaidad', 'Anualidad']" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
+                      </canvas>
+                  </div>
+              </div>
+          </div>
+
+          <div class="row" *ngIf="opcionSeleccionada === '5'">
+            <div class="col-md-6" *ngFor="let gimnasioData of datosGraficosPorGimnasio | keyvalue">
+              <br><br><br>
+              <div >
+                <h1>{{ gimnasioData.key }}</h1>
+                <div style="width: 90%; height: 70%;">
+                  <canvas baseChart 
+                          [datasets]="gimnasioData.value.chartData" 
+                          [labels]="gimnasioData.value.chartLabels" 
+                          [options]="barChartOptions" 
+                          [legend]="barChartLegend" 
+                          [type]="barChartType">
+                  </canvas>
+                </div>
+              </div>
+            </div>
         </div>
-      </form>
-      <!-- Contenedor correspondiente a renderizar la grafica-->
-      <div *ngIf="contenedorChart">
-        <canvas id="myChart"></canvas>
+
+          <!--<div class="row" *ngIf="opcionSeleccionada === '1'">
+            <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
+              <br><br><br>
+              <h1>{{ chartData.label }}</h1>
+              <div style="width: 90%; height: 70%;">
+                <canvas baseChart [datasets]="[{ data: chartData.data }]" [labels]="['Ventas']" [options]="doughnutChartOptions" [legend]="doughnutChartLegend" [type]="doughnutChartType"></canvas>
+              </div>
+            </div>
+          </div>-->
+          
       </div>
-    </div>
   </div>
 </div>
-
-<!--<form [formGroup]="form">
-  <p>
-    <mat-form-field appearance="outline">
-      <mat-label>Sucursal</mat-label>
-      <mat-select id="sucursal" formControlName="sucursal">
-        <mat-option value="0">Mostrar todos...</mat-option>
-        <mat-option *ngFor="let opcion of listaSucursales" [value]="opcion.id"> {{ opcion.sucursal }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="outline">
-      <mat-label>Periodo</mat-label>
-      <mat-date-range-input [rangePicker]="picker">
-        <input matStartDate placeholder="Fecha inicial" formControlName="p_inicial">
-        <input matEndDate placeholder="Fecha final" formControlName="p_final">
-      </mat-date-range-input>
-      <mat-hint>YYYY/MM/DD – YYYY/MM/DD</mat-hint>
-      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-date-range-picker #picker></mat-date-range-picker>
-    </mat-form-field>
-  </p>
-  <button class="btn btn-danger" (click)="consult()">Consultar información...</button>
-</form>
-
-<br />
-<button class="btn btn-danger" (click)="eventoX()">Selecciona puerto...</button>
-<button class="btn btn-info" (click)="enviarDatosPorPuertoSerial()">Conectar y Enviar Datos</button>-->
+</div>
