--- a/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
+++ b/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
@@ -1,51 +1,79 @@
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
-<h1 mat-dialog-title>Confirmación</h1>
+<h1 mat-dialog-title class="title">Confirmación</h1>
 <div mat-dialog-content>
-  <img [src]="photo" class="size_image" alt="Imagen del Cliente no disponible">
-  <!--<img src="../../../assets/img/user.png" class="size_image" alt="Imagen del Cliente no disponible">-->
-  <div class="formContent">
-    <form [formGroup]="form">
-      <mat-form-field appearance="outline" class="formInputs">
-        <mat-label>Nombre:</mat-label>
-        <input id="nombre" formControlName="nombre" type="text" matInput autocomplete="off" placeholder="Nombre" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="formInputs">
-        <mat-label>Apellido paterno:</mat-label>
-        <input id="apPaterno" formControlName="apPaterno" type="text" matInput autocomplete="off" placeholder="Apellido paterno" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="formInputs">
-        <mat-label>Apellido materno:</mat-label>
-        <input id="apMaterno" formControlName="apMaterno" type="text" matInput autocomplete="off" placeholder="Apellido materno" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="formInputs">
-        <mat-label>Telefono:</mat-label>
-        <input id="telefono" formControlName="telefono" type="text" matInput autocomplete="off" placeholder="Telefono" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="formInputs">
-        <mat-label>Correo electronico.</mat-label>
-        <input id="email" formControlName="email" type="text" matInput autocomplete="off" placeholder="Correo electronico" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="formInputs">
-        <mat-label>Estatura</mat-label>
-        <input id="estatura" formControlName="estatura" type="text" matInput autocomplete="off" placeholder="Estatura" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="formInputs">
-        <mat-label>Peso</mat-label>
-        <input id="peso" formControlName="peso" type="text" matInput autocomplete="off" placeholder="Peso" />
-      </mat-form-field>
-
-      <div style="display: flex; justify-content: center;">
-        <button mat-raised-button (click)="actualizar()" style="background-color: #fd9727; font-size: 15px; margin-top: 10px; height: 40px;">Actualizar información</button>
-     </div>
-
-    </form>
+<div class="row">
+  <div class="col-sm-5">
+    <img [src]="photo" class="size_image" alt="Imagen del Cliente no disponible" style="width: 90%;">
   </div>
+  <div class="col-sm-7">
+    <form [formGroup]="form">
+    <div class="row">
+      <label>INFORMACIÓN DEL CLIENTE</label>
+     
+      <div class="col-sm-6">
+        <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
+          <mat-label>Nombre:</mat-label>
+          <input id="nombre" formControlName="nombre" type="text" matInput autocomplete="off" placeholder="Nombre" />
+        </mat-form-field>
+
+      </div>
+      <div class="col-sm-6">
+        <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
+          <mat-label>Apellido paterno:</mat-label>
+          <input id="apPaterno" formControlName="apPaterno" type="text" matInput autocomplete="off" placeholder="Apellido paterno" />
+        </mat-form-field>
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
+          <mat-label>Apellido materno:</mat-label>
+          <input id="apMaterno" formControlName="apMaterno" type="text" matInput autocomplete="off" placeholder="Apellido materno" />
+        </mat-form-field>
+      </div>
+      <div class="col-sm-6">
+        <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
+          <mat-label>Telefono:</mat-label>
+          <input id="telefono" formControlName="telefono" type="text" matInput autocomplete="off" placeholder="Telefono" />
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
+          <mat-label>Correo electronico.</mat-label>
+          <input id="email" formControlName="email" type="text" matInput autocomplete="off" placeholder="Correo electronico" />
+        </mat-form-field>
+      </div>
+      <div class="col-sm-6">
+        <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
+          <mat-label>Estatura</mat-label>
+          <input id="estatura" formControlName="estatura" type="text" matInput autocomplete="off" placeholder="Estatura" />
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
+          <mat-label>Peso</mat-label>
+          <input id="peso" formControlName="peso" type="text" matInput autocomplete="off" placeholder="Peso" />
+        </mat-form-field>
+      </div>
+      <div class="col-sm-6">
+        <div style="display: flex; justify-content: center;">
+          <button mat-raised-button (click)="actualizar()" style="background-color: #fd9727; font-size: 15px;  height: 40px;">Actualizar información</button>
+       </div>
+      </div>
+    </div>
+    </form>
+
+  </div>
+</div>
+<br><br>
   <div class="grid">
     <!--<div class="column">
       <h3 style="font-weight: bold;">Nombre:</h3> {{ data.nombre }}
