--- a/src/app/modules/form-pago-emergente/form-pago-emergente.component.css
+++ b/src/app/modules/form-pago-emergente/form-pago-emergente.component.css
@@ -26,3 +26,13 @@
 .column {
     width: 100%;  /* Opcional: Asegura que cada columna ocupe todo el ancho disponible */
 }
+
+.title {
+    background-color: #eeeded;
+    padding: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+
+
