--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -5,22 +5,24 @@
    
   }
 
-
   .dashboard-cardss {
     display: flex;
   flex-wrap: wrap;
   }
   
   .orange-card {
-    background-color: #fd9727; /* Naranja */
+    background-color: #ffffff; 
+    border: 1px solid #bbbcbd; 
   }
   
   .navy-card {
-    background-color: #001F3F; /* Azul Marino */
+    border: 1px solid #bbbcbd; 
+    background-color: #ffffff; 
   }
   
   .white-card {
-    background-color: #FFFFFF; /* Blanco */
+    border: 1px solid #bbbcbd; 
+    background-color: #FFFFFF; 
   }
   
   mat-card {
@@ -30,32 +32,26 @@
   }
   
   .card-image {
-    width: 50%; /* Ajusta el ancho de la imagen según sea necesario */
+    width: 60%; /* Ajusta el ancho de la imagen según sea necesario */
     height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
   }
 
   .card-imagenesD {
-    width: 30%; /* Ajusta el ancho de la imagen según sea necesario */
+    width: 40%; /* Ajusta el ancho de la imagen según sea necesario */
     height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
   }
 
   .card-imagenesU {
-    width: 20%; /* Ajusta el ancho de la imagen según sea necesario */
+    width: 80%; /* Ajusta el ancho de la imagen según sea necesario */
     height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
   }
 
   .card-imagenesT {
-    width: 15%; /* Ajusta el ancho de la imagen según sea necesario */
+    width: 45%; /* Ajusta el ancho de la imagen según sea necesario */
     height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
   }
 
   /* dashboard.component.css (o tu archivo de estilos) */
-
-.dashboard-cardss mat-card:hover {
-    background-color: #e0e0e0; /* Cambia esto al color que prefieras */
-  }
-  
-
 
   .half-width-card {
     flex: 1 0 50%;
@@ -66,3 +62,41 @@
     flex: 1 0 25%;
     margin-right: 10px; /* Espacio entre las tarjetas */
   }  
+
+  .ancho-1 {
+    flex: 1;
+  }
+  
+  .ancho-2 {
+    flex: 2;
+ 
+  }
+
+  .icon-title {
+    display: flex;
+    align-items: center;
+  }
+  
+  .icon {
+    margin-right: 8px; /* O cualquier otro valor de margen que desees */
+  }
+  
+
+  .table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  .table th, .table td {
+    border: 1px solid #ddd; /* Color y grosor del borde */
+    padding: 8px; /* Espaciado interno de las celdas */
+    text-align: left; /* Alineación del texto */
+  
+  }
+  
+
+  .sup-card {
+    border: 1px solid #bbbcbd; 
+    background-color: #FFFFFF; 
+
+  }
