--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.css
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.css
@@ -87,3 +87,26 @@ table {
     display: grid;
     grid-template-columns: 25% 10% 25% 10% 30%   
 }
+
+
+
+
+
+.estatus-activo {
+  background-color: rgb(0, 170, 28);
+  color: white;
+  border-radius: 5px; /* Ajusta el radio según tus preferencias para hacerlo más o menos ovalado */
+  padding: 3px; /* Añade un poco de espacio alrededor del contenido */
+ 
+  text-align: center; /* Centra el contenido horizontalmente */
+}
+
+
+.estatus-inactivo {
+  background-color: rgb(163, 0, 0);
+  color: rgb(255, 255, 255);
+  border-radius: 5px; /* Ajusta el radio según tus preferencias para hacerlo más o menos ovalado */
+  padding: 3px; /* Añade un poco de espacio alrededor del contenido */
+  display: inline-block; /* Hace que el elemento sea en línea y respete el texto */
+  text-align: center; /* Centra el contenido horizontalmente */
+}
