--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -1,11 +1,10 @@
 <div style="margin-top: 60px;">
   <div class="container mt-4">
-  <h2>PAGO DE MEMBRESIA EN EFECTIVO</h2>
+  <h2>LISTA DE CLIENTES Y PAGO DE MEMBRESÍA EN EFECTIVO</h2>
     <!--<mat-tab-group>-->
         <!-- APARTADO 1, LISTADO TOTAL DE CLIENTES CON UNA MEMBRESIA ACTIVA -->
         <!--<mat-tab label="Clientes activos"> -->
             <br>
-            <h2>Lista de clientes con status activo</h2>
 
             <div class="grid-input-date" >
               <div style="display: flex; justify-content: flex-end;">
@@ -55,17 +54,15 @@
             <div  class="table-container">
             <table mat-table [dataSource]="dataSourceActivos" class="mat-elevation-z8">
                 <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsActivos">
-                  <th mat-header-cell *matHeaderCellDef style="text-align: center;">{{ column }}</th>
-                  <td mat-cell *matCellDef="let prod" style="text-align: center;">
-                    <ng-container *ngIf="column === 'ID'">
+                  <th mat-header-cell *matHeaderCellDef >{{ column }}</th>
+                  <td mat-cell *matCellDef="let prod">
+                    <!--<ng-container *ngIf="column === 'ID'">
                         {{ prod.ID }}
-                      </ng-container>
+                      </ng-container>-->
                       <ng-container *ngIf="column === 'Nombre'">
                         {{ prod.Nombre }}
                       </ng-container>
-                      <ng-container *ngIf="column === 'Sucursal'">
-                        {{ prod.Sucursal }}
-                      </ng-container>
+                     
                       <ng-container *ngIf="column === 'Membresia'">
                         <ng-container *ngIf="prod.accion !== 'Online'">
                           {{ prod.Membresia }}
@@ -76,7 +73,7 @@
                       </ng-container>
                       <ng-container *ngIf="column === 'Precio'">
                         <ng-container *ngIf="prod.accion !== 'Online'">
-                          {{ prod.Precio }}
+                          ${{ prod.Precio }}
                         </ng-container>
                         <ng-container *ngIf="prod.accion === 'Online'">
                           &nbsp;
@@ -98,12 +95,14 @@
                           &nbsp;
                         </ng-container>
                       </ng-container>
-                      <ng-container *ngIf="column === 'Status'">
-                        <p>{{ prod.Status }}</p>
-                        <mat-icon [ngClass]="{'icon-size': true, 'activo-icon': prod.Status === 'Activo', 'inactivo-icon': prod.Status !== 'Activo'}">
-                          {{ prod.Status === 'Activo' ? 'toggle_on' : 'toggle_off' }}
-                        </mat-icon>
+                      <ng-container *ngIf="column === 'Estatus'">
+                        <div [ngClass]="{'estatus-activo': prod.Status === 'Activo', 'estatus-inactivo': prod.Status !== 'Activo'}">
+                          {{ prod.Status }}
+                        </div>
                       </ng-container>
+
+                    
+                      
                       <!--<ng-container *ngIf="column === 'Dinero Recibido'">
                         <mat-form-field>
                           <input matInput [(ngModel)]="prod.cash" [disabled]="prod.Status === 'Activo'" type="number" min="0" placeholder="0"/> ///[(ngModel)]="updMem.moneyRecibido"
