--- a/src/app/modules/lista-producto-linea/lista-producto.component.html
+++ b/src/app/modules/lista-producto-linea/lista-producto.component.html
@@ -1,3 +1,4 @@
+<div style="margin-top: 60px;">
 <div class="container mt-4">
     <div style="text-align: right; margin-bottom: 50px;">
         <button mat-raised-button routerLink="../crearProductoLinea" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR PRODUCTO</button>
@@ -54,6 +55,6 @@
     </div>
   </div>
 
-  
+</div>
   
   
