--- a/src/app/modules/crearProducto/crearProducto.component.html
+++ b/src/app/modules/crearProducto/crearProducto.component.html
@@ -185,6 +185,7 @@
                                 >
                           </mat-form-field>--> 
                           <mat-form-field appearance="outline" class="inputs_properties">
+                           <mat-label>Sabor</mat-label>
                            <input
                              matInput
                              formControlName="sabor"
