--- a/src/app/modules/editar-producto/editar-producto.component.html
+++ b/src/app/modules/editar-producto/editar-producto.component.html
@@ -146,6 +146,7 @@
                               </mat-form-field>
                              
                               <mat-form-field appearance="outline" class="inputs_properties">
+                                 <mat-label>Sabor</mat-label>
                                  <input
                                    matInput
                                    formControlName="sabor"
