--- a/src/app/modules/crearProductoLinea/crearProducto.component.css
+++ b/src/app/modules/crearProductoLinea/crearProducto.component.css
@@ -96,3 +96,11 @@ table {
 .btn fa-icon {
   margin-right: 8px; /* Ajusta el espacio entre el ícono y el texto */
 }
+
+.title {
+  background-color: #eeeded;
+  padding: 12px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+}
