--- a/src/app/modules/lista-producto-linea/lista-producto.component.html
+++ b/src/app/modules/lista-producto-linea/lista-producto.component.html
@@ -1,7 +1,7 @@
 <div style="margin-top: 60px;">
 <div class="container mt-4">
     <div style="text-align: right; margin-bottom: 50px;">
-        <button mat-raised-button routerLink="../crearProductoLinea" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR PRODUCTO</button>
+        <button mat-raised-button (click)="AbrirDialogo()" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR PRODUCTO</button>
       </div>
 
     <div class="mb-3">
