--- a/src/app/modules/sucursal-lista/sucursal-lista.component.html
+++ b/src/app/modules/sucursal-lista/sucursal-lista.component.html
@@ -109,13 +109,6 @@
                          </button>-->
                    </td>
                </ng-container>
-               <ng-container matColumnDef="horario">
-                   <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Horario</th>
-                   <td mat-cell *matCellDef="let item">
-                       <!--<button mat-raised-button style="background-color: #fd9727; font-size: 14px; margin-right: 10px;" (click)="agregarHorario(item.idGimnasio)">+Agregar horario</button>-->
-                       <button mat-raised-button style="background-color: #0a0a0a; font-size: 14px; color: white;" (click)="verHorario(item.idGimnasio)">Ver horario</button>
-                   </td>
-               </ng-container>
                <ng-container matColumnDef="ubicacion">
                    <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Ubicacion</th>
                    <td mat-cell *matCellDef="let item">
@@ -135,7 +128,13 @@
                        </div>
                    </td>
                </ng-container>
-
+               <ng-container matColumnDef="horario">
+                <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Horario</th>
+                <td mat-cell *matCellDef="let item">
+                    <!--<button mat-raised-button style="background-color: #fd9727; font-size: 14px; margin-right: 10px;" (click)="agregarHorario(item.idGimnasio)">+Agregar horario</button>-->
+                    <button mat-raised-button style="background-color: #0a0a0a; font-size: 14px; color: rgb(0, 0, 0); background-color: #fd9727;" (click)="verHorario(item.idGimnasio)">Ver horario</button>
+                </td>
+            </ng-container>
                <ng-container matColumnDef="documentacion">
                 <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Documentación</th>
                 <td mat-cell *matCellDef="let item">
